--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="Manage your tasks efficiently with Pomofocus Todo List. Boost productivity using the Pomodoro Technique." />
+  <meta name="keywords" content="Todo List, Pomofocus, Pomodoro Technique, Task Management, Productivity" />
+  <meta name="author" content="Mirodil Mavlonov" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Todo List - Pomofocus" />
+  <meta property="og:description" content="Manage your tasks efficiently with Pomofocus Todo List. Boost productivity using the Pomodoro Technique." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://pomofocus.io/todo" />
+  <meta property="og:image" content="https://pomofocus.io/logo.png" />
+  <meta property="og:site_name" content="Pomofocus" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Todo List - Pomofocus" />
+  <meta name="twitter:description" content="Manage your tasks efficiently with Pomofocus Todo List. Boost productivity using the Pomodoro Technique." />
+  <meta name="twitter:image" content="https://pomofocus.io/logo.png" />
+  <meta name="twitter:site" content="@pomofocus" />
+  <meta name="twitter:creator" content="@pomofocus" />
+
   <title>Pomodora</title>
 </head>
 <body>
